@@ -682,5 +682,6 @@
 	  - update RANDOM ...
           - revisited MAKE_DLL & CALL_EXTERNAL
           - MIN, MAX /ABSOLUTE.
-          - support of DEVICE,SET_CHARACTER_SIZE, and consequently a better positioning and sizes of plots.     
+          - support of DEVICE,SET_CHARACTER_SIZE, and consequently a better positioning and sizes of plots.
+          - TRIANGULATE and TRIGRID complete (including spherical triangulation) using Renka's legacy algorithms.   
 	  
